fixed white spacing between rows

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -118,17 +118,15 @@ footer, .page-footer {
 //   border-radius: 5px;
 // }
 
-#row {
-  display: flex;
-}
-
 #birds {
   position: relative;
   min-height: 500px;
   display: flex;
+  margin-bottom: -30px;
 }
 
 .card {
+  flex-direction: row;
   z-index: 2;
   align-items: center;
   justify-content: center;
@@ -141,6 +139,7 @@ footer, .page-footer {
   width: 100%;
   height: 100vh;
   position: relative;
+  margin-bottom: -30px;
 }
 
 .circles{
